--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
         <p class="text-center">
             {{ site.title }} {{ site.time | date: '%Y' }} |
             Powered by <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
+                | Designed with accessibility in mind
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
     </div>
