Added analytics to subscriptions

--- a/_includes/js_subscribe.html
+++ b/_includes/js_subscribe.html
@@ -24,6 +24,7 @@
 
     $(document).ready(function(){
         $('#form').submit(function() {
+            ga('send', 'event', 'Subscribe', 'click', 'Subscribe_Main_Page');
             postToGoogle();
             return false;
         });
