--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 
     <link rel="shortcut icon" href="{{ "/favicon.ico?1" | prepend: site.baseurl }}">
     {% seo %}
+    {% if page.thumbnailpath %}<meta property="og:image" content="{{ page.thumbnailpath | prepend: site.baseurl | prepend: site.url }}" />{% endif %}
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
