--- a/css/main.scss
+++ b/css/main.scss
@@ -84,3 +84,29 @@ body {
 .navbar-form .has-feedback .form-control-feedback{
   top:10px
 }
+
+.wide {
+  width:100%;
+  height:50vh;
+  background-size:cover;
+  background-position: center;
+}
+
+.wide img {
+  width:100%;
+}
+
+.logo {
+  color:#fff;
+  font-weight:800;
+  font-size:14pt;
+  padding:25px;
+  text-align:center;
+}
+
+.line {
+  padding-top:20px;
+  white-space:no-wrap;
+  overflow:hidden;
+  text-align:center;
+}
