Added youtube video to main page and new blog post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
     {% include footer.html %}
     {% include js_files.html %}
-    {% include js_subscribe.html %}
+    {% include index_page_js.html %}
 </body>
 
 </html>
